通讯组件版本升级，优化通讯状态判断逻辑；